--- a/work/work.org
+++ b/work/work.org
@@ -4,8 +4,9 @@
 
 #+BEGIN_SRC sh
     ip a add 192.168.12.1/255.255.255.0 dev wlx9cefd5fdd60e
-
 #+END_SRC
+
+#+RESULTS:
 
 * TODO dhcp network based ip allocation code
 
