--- a/work/work.org
+++ b/work/work.org
@@ -1,10 +1,13 @@
 #+title: work
 
-* TODO network watchdog
-  if after 15m, there is no network connectivity -- reboot
+* DONE give the same address out for mac hit
 
-* TODO give the same address out for mac hit
+* DONE dhcp network based ip allocation code
 
+#+BEGIN_SRC lisp
+  (inferior-shell:fork)
+   
+#+END_SRC
 
 * TODO get routing working
 
@@ -12,10 +15,8 @@
     ip a add 192.168.12.1/255.255.255.0 dev wlx9cefd5fdd60e
 #+END_SRC
 
-#+RESULTS:
-
-
-* TODO dhcp network based ip allocation code
+* TODO network watchdog
+  if after 15m, there is no network connectivity -- reboot
 
 
 * TODO have everything come up from a boot
