--- a/work/work.org
+++ b/work/work.org
@@ -53,6 +53,8 @@
     ip a add 192.168.12.1/255.255.255.0 dev wlx9cefd5fdd60e
 #+END_SRC
 
+#+RESULTS:
+
 * TODO network watchdog
   if after 15m, there is no network connectivity -- reboot
 
