--- a/work/work.org
+++ b/work/work.org
@@ -8,13 +8,16 @@
 ** TODO catch dhcp parse error and log
    Just don't out the dhcp address, but keep chugging along
 
-
 ** TODO gave the same ip address out to clients
    wtf??
 
-** TODO cl-async
-   - poll (fd)
-   - wookie for http
+*** TODO dhcp client request 
+
+* TODO parsing dhcp options
+  returns an object now, with slot for the key options, and restof for the others
+
+    
+
 
 
 * Week
