--- a/readme.org
+++ b/readme.org
@@ -38,6 +38,7 @@
 | [[file:./devdocs/dhcp-options.org]]       |
 | [[file:./devdocs/dhcp-options-table.org]] |
 | [[file:./devdocs/dhcp.org]]               |
+| [[file:./devdocs/networks.org]]           |
 | [[file:./readme.org]]                     |
 | [[file:./work/plan.org]]                  |
 | [[file:./work/work.org]]                  |
