--- a/work/work.org
+++ b/work/work.org
@@ -4,7 +4,7 @@
 
   Remote slime
 #+BEGIN_SRC sh
-ssh -N -R 4009:localhost:4009 root@192.168.1.3
+  ssh -L 4009:localhost:4009 root@192.168.1.3
 #+END_SRC
 
 
