--- a/devdocs/dhcp.org
+++ b/devdocs/dhcp.org
@@ -5,9 +5,11 @@
 
 ** Key Resources
  
-  | [[https://tools.ietf.org/html/rfc1531][RFC 1531]]       |
-  | [[https://en.wikipedia.org/wiki/Dynamic_Host_Configuration_Protocol][Wikipedia DHCP]] |
-  | [[https://tools.ietf.org/html/rfc2132][RFC 2132]]       |
+  | [[https://tools.ietf.org/html/rfc1531][RFC 1531]]                     |                              |
+  | [[https://en.wikipedia.org/wiki/Dynamic_Host_Configuration_Protocol]] | WikiPedia DHCP               |
+  | [[https://tools.ietf.org/html/rfc2132][RFC 2132]]                     |                              |
+  | [[https://www.ietf.org/rfc/rfc1878.txt]]                              | Variable Length subnet table |
+  | [[https://www.aelius.com/njh/subnet_sheet.html]]                      | Subnet mask cheat sheet      |
 
 
 ** DHCP Message
@@ -21,25 +23,25 @@
       
 #+tblname: dhcp-static-header
 #+results: dhcp-bootp-base-fields
-   | Field   | Octets | description                              | type   | Notes                                    |
-   |         |        | <40>                                     |        | <40>                                     |
-   |---------+--------+------------------------------------------+--------+------------------------------------------|
-   | op      |      1 | Message op code / message type. 1 = BOOTREQUEST, 2 = BOOTREPLY | int    |                                          |
-   | htype   |      1 | Hardware address type, see ARP section in "Assigned Numbers" RFC; e.g., '1' = 10mb ethernet. | int    |                                          |
-   | hlen    |      1 | Hardware address length (e.g. '6' for 10mb ethernet). | int    |                                          |
-   | hops    |      1 | Client sets to zero, optionally used by relay-agents when booting via a relay-agent. | int    |                                          |
-   | xid     |      4 | Transaction ID, a random number chosen by the client, used by the client and server to associate messages and responses between a client and a server. | int    |                                          |
-   | secs    |      2 | Filled in by client, seconds elapsed since client started trying to boot. | int    |                                          |
-   | flags   |      2 | Flags (see figure 2).                    | int    |                                          |
-   | ciaddr  |      4 | Client IP address; filled in by client in DHCPREQUEST if verifying previously allocated configuration parameters. | int    |                                          |
-   | yiaddr  |      4 | 'your' (client) IP address.              | int    |                                          |
-   | siaddr  |      4 | IP address of next server to use in bootstrap; returned in DHCPOFFER, DHCPACK and DHCPNAK by server. | int    |                                          |
-   | giaddr  |      4 | Relay agent IP address, used in booting via a relay-agent. | int    |                                          |
-   | chaddr  |     16 | Client hardware address.                 | mac    | Ethernet: 6 octets (48 bits)             |
-   | sname   |     64 | Optional server host name, null terminated string. | string |                                          |
-   | file    |    128 | Boot file name, null terminated string; "generic" name or null in DHCPDISCOVER, fully qualified directory-path name in DHCPOFFER. | string | I'm seeing the cookie at different places.  Search for it |
-   | mcookie |      4 | 0x63825363                               | int    | Advance to the cookie and then parse     |
-   | options |    312 | Optional parameters field.  See the options documents for a list of defined options. | rest   |                                          |
+   | Field   | Octets | description                                                                                                                                            | type   | Notes                                                     |
+   |         |        | <40>                                                                                                                                                   |        | <40>                                                      |
+   |---------+--------+--------------------------------------------------------------------------------------------------------------------------------------------------------+--------+-----------------------------------------------------------|
+   | op      |      1 | Message op code / message type. 1 = BOOTREQUEST, 2 = BOOTREPLY                                                                                         | int    |                                                           |
+   | htype   |      1 | Hardware address type, see ARP section in "Assigned Numbers" RFC; e.g., '1' = 10mb ethernet.                                                           | int    |                                                           |
+   | hlen    |      1 | Hardware address length (e.g. '6' for 10mb ethernet).                                                                                                  | int    |                                                           |
+   | hops    |      1 | Client sets to zero, optionally used by relay-agents when booting via a relay-agent.                                                                   | int    |                                                           |
+   | xid     |      4 | Transaction ID, a random number chosen by the client, used by the client and server to associate messages and responses between a client and a server. | int    |                                                           |
+   | secs    |      2 | Filled in by client, seconds elapsed since client started trying to boot.                                                                              | int    |                                                           |
+   | flags   |      2 | Flags (see figure 2).                                                                                                                                  | int    |                                                           |
+   | ciaddr  |      4 | Client IP address; filled in by client in DHCPREQUEST if verifying previously allocated configuration parameters.                                      | int    |                                                           |
+   | yiaddr  |      4 | 'your' (client) IP address.                                                                                                                            | int    |                                                           |
+   | siaddr  |      4 | IP address of next server to use in bootstrap; returned in DHCPOFFER, DHCPACK and DHCPNAK by server.                                                   | int    |                                                           |
+   | giaddr  |      4 | Relay agent IP address, used in booting via a relay-agent.                                                                                             | int    |                                                           |
+   | chaddr  |     16 | Client hardware address.                                                                                                                               | mac    | Ethernet: 6 octets (48 bits)                              |
+   | sname   |     64 | Optional server host name, null terminated string.                                                                                                     | string |                                                           |
+   | file    |    128 | Boot file name, null terminated string; "generic" name or null in DHCPDISCOVER, fully qualified directory-path name in DHCPOFFER.                      | string | I'm seeing the cookie at different places.  Search for it |
+   | mcookie |      4 | 0x63825363                                                                                                                                             | int    | Advance to the cookie and then parse                      |
+   | options |    312 | Optional parameters field.  See the options documents for a list of defined options.                                                                   | rest   |                                                           |
 
 
 ** DHCP Message Types
