--- a/work/work.org
+++ b/work/work.org
@@ -1,4 +1,5 @@
 #+title: work
+#+startup: overview
 
 [[/ssh:root@192.168.1.2:/]]
 
@@ -152,12 +153,13 @@
 
 
 * ORG GUIS
+
 ** OS Net Interfaces
 *** List links
     #+begin_src lisp :results output
      (loop :for obj in (lsa:ip-link-objs) do
-       (format t "~5a,~10A,~10A~%" (name obj) (state obj) (mac obj))
-      )
+       (format t "~5a,~10A,~10A~%" (lsa:name obj) (lsa:state obj) (lsa:mac obj))
+       )
    
     #+end_src
 
@@ -168,13 +170,14 @@
 *** List addresses
     #+begin_src lisp :results output
       (loop :for obj in (lsa:ip-addr-objs) do
-	(format t "~5a,~10A,~20A,~20a,~10A~%" (name obj) (state obj) (mac obj) (ltype obj) (addr obj))
+	(format t "~5a,~10A,~20A,~20a,~10A~%" (lsa:name obj) (lsa:state obj) (lsa:mac obj) (lsa:ltype obj) (lsa:addr obj))
        )   
     #+end_src
 
     #+RESULTS:
     : lo   ,UNKNOWN   ,00:00:00:00:00:00   ,link/loopback       ,127.0.0.1/8
     : wlo1 ,UP        ,48:45:20:ef:5b:e6   ,link/ether          ,192.168.1.3/24
+
 
 ** cidr-subnets
    #+begin_src lisp :result 
@@ -328,4 +331,4 @@
    #+end_src
 
    #+RESULTS:
-   : NIL
+   : #<DHCP-ADDRESS #(), 10.  0.  0.  1,4141,NIL>
