--- a/work/work.org
+++ b/work/work.org
@@ -19,8 +19,70 @@
 
   Remote slime
 #+BEGIN_SRC sh
-  ssh -L 4009:localhost:4009 root@192.168.1.2
+  /usr/bin/gnome-terminal  -e 'ssh -L 4010:localhost:4010 root@192.168.1.7' &
 #+END_SRC
+
+#+RESULTS:
+: # Failed to parse arguments: Unknown option -L
+
+#+BEGIN_SRC sh :results output
+   gnome-terminal --help-all
+#+END_SRC
+
+#+RESULTS:
+#+begin_example
+Usage:
+  gnome-terminal [OPTION…] [-- COMMAND …]
+
+Help Options:
+  -h, --help                      Show help options
+  --help-all                      Show all help options
+  --help-gtk                      Show GTK+ Options
+  --help-terminal                 Show terminal options
+  --help-window-options           Show per-window options
+  --help-terminal-options         Show per-terminal options
+
+GTK+ Options
+  --class=CLASS                   Program class as used by the window manager
+  --name=NAME                     Program name as used by the window manager
+  --gdk-debug=FLAGS               GDK debugging flags to set
+  --gdk-no-debug=FLAGS            GDK debugging flags to unset
+  --gtk-module=MODULES            Load additional GTK+ modules
+  --g-fatal-warnings              Make all warnings fatal
+  --gtk-debug=FLAGS               GTK+ debugging flags to set
+  --gtk-no-debug=FLAGS            GTK+ debugging flags to unset
+
+Options to open new windows or terminal tabs; more than one of these may be specified:
+  --window                        Open a new window containing a tab with the default profile
+  --tab                           Open a new tab in the last-opened window with the default profile
+
+Window options; if used before the first --window or --tab argument, sets the default for all windows:
+  --show-menubar                  Turn on the menubar
+  --hide-menubar                  Turn off the menubar
+  --maximize                      Maximize the window
+  --full-screen                   Full-screen the window
+  --geometry=GEOMETRY             Set the window size; for example: 80x24, or 80x24+200+200 (COLSxROWS+X+Y)
+  --role=ROLE                     Set the window role
+  --active                        Set the last specified tab as the active one in its window
+
+Terminal options; if used before the first --window or --tab argument, sets the default for all terminals:
+  -e, --command                   Execute the argument to this option inside the terminal
+  --profile=PROFILE-NAME          Use the given profile instead of the default profile
+  -t, --title=TITLE               Set the initial terminal title
+  --working-directory=DIRNAME     Set the working directory
+  --wait                          Wait until the child exits
+  --fd=FD                         Forward file descriptor
+  --zoom=ZOOM                     Set the terminal’s zoom factor (1.0 = normal size)
+
+Application Options:
+  --load-config=FILE              Load a terminal configuration file
+  --preferences                   Show preferences window
+  -p, --print-environment         Print environment variables to interact with the terminal
+  -v, --verbose                   Increase diagnostic verbosity
+  -q, --quiet                     Suppress output
+  --display=DISPLAY               X display to use
+
+#+end_example
 
 
 * Today
